# Watch-Tower-NG

./: .all-contributorsrc  .codacy.yml  .editorconfig  .gitignore  CLAUDE.md  LICENSE  NOTICE
.githooks/: pre-commit  scan.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_request.yml  investigation.md
.github/workflows/: ci.yml  codeql-analysis.yml  greetings.yml  manual-build.yml  package.yml  publish-docs.yml  pull-request.yml  (+2 more)
dev/: README.md
dev/work/watchtower-rs/: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  build.rs  build.sh  code_of_conduct.md  dist-workspace.toml  docker-compose.yml  goreleaser.yml  mkdocs.yml
dev/work/watchtower-rs/dockerfiles/: Dockerfile.dev-self-contained  Dockerfile.self-contained
dev/work/watchtower-rs/docs/: arguments.md  container-selection.md  http-api-mode.md  index.md  introduction.md  notifications.md  private-registries.md  remote-hosts.md  running-multiple-instances.md  secure-connections.md  updating.md  usage-overview.md
dev/work/watchtower-rs/docs/stylesheets/: theme.css
dev/work/watchtower-rs/observability/prometheus/: prometheus.yml
dev/work/watchtower-rs/src/: actions.rs  api.rs  api_metrics.rs  api_update.rs  cgroup.rs  cli.rs  container.rs  container_metadata.rs  docker_client.rs  filters.rs  flags.rs  lib.rs  lifecycle.rs  main.rs  meta.rs  metrics.rs  notifications.rs  notifier.rs  notify_upgrade.rs  rand_name.rs  rand_sha256.rs  session.rs  sorter.rs  startup.rs  types.rs  util.rs  wait.rs
dev/work/watchtower-rs/src/actions/: check.rs  mod.rs  update.rs
dev/work/watchtower-rs/src/container/: errors.rs
dev/work/watchtower-rs/src/notifications/: common_templates.rs  email.rs  funcs.rs  gotify.rs  json.rs  json_data.rs  mod.rs  model.rs  msteams.rs  notifier.rs  preview.rs  runtime.rs  shoutrrr.rs  slack.rs  template_funcs.rs
dev/work/watchtower-rs/src/notifications/preview/: data.rs  logs.rs  preview_strings.rs  report.rs  status.rs  tplprev.rs
dev/work/watchtower-rs/src/registry/: auth.rs  core.rs  credentials.rs  digest.rs  helpers.rs  manifest.rs  mod.rs  pull.rs  registry.rs  trust.rs
dev/work/watchtower-rs/src/session/: container_status.rs  mod.rs  progress.rs  report.rs
dev/work/watchtower-rs/src/types/: container.rs  convertible_notifier.rs  filter.rs  filterable_container.rs  mod.rs  notifier.rs  registry_credentials.rs  report.rs  token_response.rs  update_params.rs
dev/work/watchtower-rs/tests/internal/actions/: actions_suite_test.rs  update_test.rs
dev/work/watchtower-rs/tests/internal/actions/mocks/: client.rs  mod.rs
dev/work/watchtower-rs/tests/internal/flags/: flags_test.rs
dev/work/watchtower-rs/tests/pkg/api/: api_test.rs
dev/work/watchtower-rs/tests/pkg/api/metrics/: metrics_test.rs
dev/work/watchtower-rs/tests/pkg/container/: cgroup_id_test.rs  client_test.rs  container_mock_test.rs  container_suite_test.rs  container_test.rs  util_test.rs
dev/work/watchtower-rs/tests/pkg/container/mocks/: ApiServer.rs  FilterableContainer.rs  api_server_test.rs  container_ref.rs
dev/work/watchtower-rs/tests/pkg/container/mocks/data/: container_restarting.json  image_running.json
dev/work/watchtower-rs/tests/pkg/filters/: filters_test.rs
dev/work/watchtower-rs/tests/pkg/notifications/: notifier_test.rs
dev/work/watchtower-rs/tests/pkg/registry/: registry_suite_test.rs  trust_test.rs
dev/work/watchtower-rs/tests/pkg/registry/auth/: auth_test.rs
dev/work/watchtower-rs/tests/pkg/registry/digest/: digest_test.rs
dev/work/watchtower-rs/tests/pkg/registry/helpers/: helpers_test.rs
dev/work/watchtower-rs/tests/pkg/registry/manifest/: manifest_test.rs
release/: README.md
(+10 files in other folders)
