[package]
name = "watchtower-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Rust rewrite of Watchtower"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(standalone_metrics_test)'] }
