[package]
name = "watchtower-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Rust rewrite of Watchtower"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
go-template = "0.0.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
titlecase = "3"
url = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(standalone_metrics_test)'] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
